--- a/duplicate_cards_matching/src/index.css
+++ b/duplicate_cards_matching/src/index.css
@@ -27,15 +27,13 @@ body {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
-    padding: 2px;
     transition: background-color 0.2s ease;
+    border: 0.5px solid black;
 }
 
 .square img {
     width: 100%;
     height: 100%;
-    border: 0.5px solid black;
-    transition: visibility 0.3s ease, opacity 0.3s ease;
 }
 
 .square:hover {
@@ -46,10 +44,7 @@ body {
     background-color: rgb(255, 238, 86);
 }
 
-img .show {
-    display: block;
-}
-
-img .hide {
-    display: none;
+.square img.hide {
+    opacity: 0;
+    visibility: hidden;
 }
