change timer display

--- a/duplicate_cards_matching/src/index.css
+++ b/duplicate_cards_matching/src/index.css
@@ -71,12 +71,16 @@ body {
 }
 
 .TimerDisplay {
-    font-size: 3em;
+    width: 100%;
+    font-size: 1.5em;
     font-weight: bold;
-    font-family: 'Courier New', Courier, monospace;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: rgba(93, 88, 88, 0.1);
+    padding: 10px;
+    border-radius: 5px;
 }
 
 .countdown-watch {
@@ -92,7 +96,8 @@ body {
 
 .countdown-watch-display {
     width: 80%;
-
+    display: flex;
+    justify-content: center;
 }
 
 .countdown-watch-selections {
