--- a/duplicate_cards_matching/src/index.css
+++ b/duplicate_cards_matching/src/index.css
@@ -59,7 +59,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
+    width: 360px;
+    height: 460px;
     background-color: rgba(93, 88, 88, 0.2);
     border-radius: 10px;
     padding: 20px;
@@ -67,7 +68,7 @@ body {
 
 .game-mode h1 {
     width: 100%;
-    text-align: left;
+    text-align: center;
 }
 
 .TimerDisplay {
@@ -92,6 +93,7 @@ body {
     flex-direction: column;
     align-items: center;
     margin-bottom: 20px;
+    width: 90%;
 }
 
 .countdown-watch-display {
@@ -114,5 +116,19 @@ body {
     border-radius: 5px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    width: 90%;
+}
+
+.btn {
+    border: none;
+    background-color: transparent;
+    font-size: 2em;
+    margin-top: 10px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
     align-items: center;
 }
